@@ -10,6 +10,8 @@ RAND_bytes, RAND_pseudo_bytes - generate random data
 
  int RAND_bytes(unsigned char *buf, int num);
 
+Deprecated:
+
  int RAND_pseudo_bytes(unsigned char *buf, int num);
 
 =head1 DESCRIPTION
@@ -18,6 +20,7 @@ RAND_bytes() puts B<num> cryptographically strong pseudo-random bytes
 into B<buf>. An error occurs if the PRNG has not been seeded with
 enough randomness to ensure an unpredictable byte sequence.
 
+RAND_pseudo_bytes() has been deprecated. Users should use RAND_bytes() instead.
 RAND_pseudo_bytes() puts B<num> pseudo-random bytes into B<buf>.
 Pseudo-random byte sequences generated by RAND_pseudo_bytes() will be
 unique if they are of sufficient length, but are not necessarily
